# gsfluent_pkg

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.en.md  README.md  env.yml  run-client.sh  run-laptop.sh  run-server.sh  run-sim.sh  run-viewer.sh  run-workbench.sh  setup-client.sh  setup-server.sh  setup-view.sh  setup.sh  start-gsfluent-server.sh
apps/api/: alembic.ini  openapi.json  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py
apps/api/scripts/: export_openapi.py  seed_demo.py
apps/api/src/gsfluent_api/: __init__.py  config.py  event_store.py  events.py  gpu.py  main.py  queue.py  schemas.py  storage.py
apps/api/src/gsfluent_api/models/: artifact.py  enums.py  model.py  run.py
apps/api/src/gsfluent_api/routes/: artifacts.py  recipes.py  render_sessions.py  runs.py  stream.py  system.py  viser_proxy.py
apps/api/tests/: conftest.py  test_health.py
apps/worker-render/: Dockerfile  pyproject.toml
apps/worker-render/src/worker_render/: peer.py  scene_renderer.py
apps/worker-render/tools/: test_client.html
apps/worker-sim/: Dockerfile  pyproject.toml
apps/worker-sim/src/worker_sim/: __init__.py  config.py  engine.py  jobs.py
archive/: README.md  setup-client.sh  start-gsfluent-server.sh
deploy/: CDN.md  README.md  caddy.example.conf  gsfluent-backend.dev.service  gsfluent-backend.service
docker/: Dockerfile.backend  README.md  compose.yml
docs/: API.md  API.zh.md  ARCHITECTURE.md  HANDOFF.md  PROFILING.md  fuse-stage-slides.html  fuse-stage-slides.md
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend2/: .gitignore  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
infra/: cutover.md  docker-compose.yml
memory/: 2026-06-08-audit-refactor-pass.md  2026-06-08-reorient-transform-422.md
patches/: viser-no-cull.patch
scripts/: _install.sh  _start.sh  install-local.sh  start-local.sh
server/: Makefile  README.md  pyproject.toml  setup-env.sh  supervise.sh
server/gsfluent/: _cells.py  _paths.py  cli.py  composition.py  config.py  server.py
server/gsfluent/api/: compose.py  errors.py  health.py  models.py  recipes.py  run_submission.py  runs.py  schemas.py  sequences.py  stream.py
server/gsfluent/authoring/: __init__.py  buildings.py  compose.py  materials.py  scenarios.py
server/gsfluent/core/: coord_convert.py  frame_stream.py  library.py  library_io.py  limits.py  manifest.py  models.py  recipe_lint.py  recipe_validation.py  recipes.py  recovery.py  run_manager.py  runner.py  sdnotify.py  state.py  static_to_viser.py
server/gsfluent/core/codecs/: __init__.py  gsq.py  gsq_prune.py
server/gsfluent/core/fusers/: __init__.py  knn_kabsch.py
server/gsfluent/core/sim_engines/: __init__.py  __main__.py  mock.py  mpm.py  mpm_error_patterns.yaml  mpm_errors.py  mpm_gpu.py  mpm_stability.py
server/gsfluent/observability/: __init__.py  jsonlog.py
server/gsfluent/protocols/: __init__.py  cache.py  fuse.py  observability.py  runs.py  sim.py  storage.py
server/gsfluent/schemas/: boundary.py  material_defaults.py
server/gsfluent/storage/: __init__.py  filesystem.py
server/patches/: UPSTREAM_PATCHES.md  gs_simulation_building.patched.py  mpm_solver_warp.patched.py  mpm_utils.patched.py
server/recipes/: RECIPES.md  collapse_fast.json  demolition.json  foam.json  jelly.json  metal.json  plasticine.json  sand.json  shatter.json  wrecking.json  wrecking_xl.json
server/tests/: conftest.py  test_api_compose.py  test_authoring_compose.py  test_cells.py  test_composition.py  test_config.py  test_coord_convert.py  test_frame_stream.py  test_health.py  test_library_smoke.py  test_models.py  test_recipe_lint.py  test_recipes.py  test_render_loop_sequential.py  test_runner.py  test_runner_env_rename.py  test_runs_api.py  test_schemas.py  test_sequences_import.py  test_splat_ring.py  test_viser_download_to_disk.py  test_viser_headless_cell_lru.py  test_viser_headless_deprecation.py  test_viser_headless_events.py  test_viser_headless_v2.py  test_viser_lod_helpers.py  test_watchdog_gating.py  test_zup_invariant.py
server/tests/api/: test_errors.py  test_health.py  test_model_upload_helpers.py  test_runs_helpers.py  test_runs_validation.py  test_sequences_base_gsq.py  test_sequences_cache_headers.py  test_stream_helpers.py
server/tests/codecs/: test_gsq.py  test_gsq_prune.py  test_gsq_v2.py  test_pack_prune_wiring.py  test_transcode_gsq.py
server/tests/core/: test_library_io.py  test_limits.py  test_recipe_validation.py  test_recovery.py  test_sdnotify.py  test_state.py
server/tests/fixtures/: mock_sim.sh
server/tests/fusers/: test_knn_kabsch.py  test_knn_kabsch_fracture.py  test_knn_kabsch_rotation.py
server/tests/integration/: conftest.py  test_cancel_kills_pg.py  test_phase2_e2e_smoke.py  test_recipe_rejected_early.py  test_restart_mid_run_recovers.py  test_sigterm_ignoring_sim_gets_sigkill.py  test_sim_error_classification.py  test_streaming_cache_hit.py  test_streaming_resume_from_partial.py  test_wall_time_enforced.py
server/tests/observability/: test_event_taxonomy.py  test_jsonlog.py
server/tests/protocols/: test_cache_protocol.py  test_fuse_protocol.py  test_observability_protocol.py  test_runs_protocol.py  test_sim_protocol.py  test_storage_protocol.py
server/tests/runs/: test_asyncio_run_manager.py  test_recover_on_boot.py  test_signal_escalation.py  test_wall_time.py
server/tests/sim_engines/: test_mock.py  test_mpm.py
server/tests/storage/: test_filesystem.py
server/tools/: batch_convert_to_npz.py  check_recipe_compat.py  compose_recipe.py  fuse_to_full_ply.py  lint_recipes.py  migrate_to_library.py  pack_sequence.py  pack_sim_splats.py  pack_splats.py  prune_gsq.py  run_sim.sh  sequence_to_viser_npz.py  transcode_gsq.py  untip_legacy_fused_frames.py  verify_gsq_v2.py  view_gsq.py
tools/: backfill_cameras_json.py  batch_convert_to_npz.py  check_recipe_compat.py  (+21 more)
(+371 files in other folders)
