[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "gsfluent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "watchfiles>=0.21",
  "plyfile>=1.0",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
# Client-side extras: pulled in by `uv sync --extra client` on the
# machine that runs viser/sync_daemon/local_stream + the SPA. The
# server install (plain `uv sync`) deliberately omits these — the
# server doesn't render anything.
#   - viser pinned <2: the 1.x API (initial_camera, GaussianSplatHandle,
#     on_client_connect) is what tools/viser_headless.py depends on.
client = ["viser>=1.0,<2", "numpy>=1.24"]

[project.scripts]
gsfluent = "gsfluent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gsfluent"]
include = ["gsfluent/static/**"]
