[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "gsfluent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "watchfiles>=0.21",
  "plyfile>=1.0",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "hypothesis>=6.100",
]
# Client-side extras: pulled in by `uv sync --extra client` on the
# machine that runs viser/sync_daemon/local_stream + the SPA. The
# server install (plain `uv sync`) deliberately omits these — the
# server doesn't render anything.
#   - viser pinned <2: the 1.x API (initial_camera, GaussianSplatHandle,
#     on_client_connect) is what tools/viser_headless.py depends on.
client = ["viser>=1.0,<2", "numpy>=1.24"]

[project.scripts]
gsfluent = "gsfluent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gsfluent"]
include = ["gsfluent/static/**"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".venv",
  "patches",
  "uv.lock",
]

[tool.ruff.lint]
# Conservative starter set: pycodestyle (E), pyflakes (F), isort (I),
# bugbear (B), pyupgrade (UP), comprehensions (C4). No formatting opinion
# beyond line-length — ruff format is opt-in. Ignore E501 (long lines):
# documented format constants and JSON-shape examples regularly exceed 100.
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests routinely have unused fixture-parameter imports flagged by F401
# (pytest fixtures are imported for side effects) and assert-rewriting
# helpers flagged by B011. Allow them.
"tests/**" = ["F401", "F811", "B011"]
# Re-export hubs: bare imports are intentional.
"gsfluent/protocols/__init__.py" = ["F401"]
"gsfluent/observability/__init__.py" = ["F401"]
"gsfluent/storage/__init__.py" = ["F401"]
"gsfluent/core/sim_engines/__init__.py" = ["F401"]
"gsfluent/core/fusers/__init__.py" = ["F401"]
"gsfluent/core/codecs/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true
# Concrete impls live under gsfluent/; tests are checked less strictly
# because Protocol-conforming stubs deliberately use Any.
files = ["gsfluent"]
plugins = []
# Third-party libs we use without type stubs.
[[tool.mypy.overrides]]
module = [
  "plyfile",
  "plyfile.*",
  "viser",
  "viser.*",
  "watchfiles",
  "watchfiles.*",
]
ignore_missing_imports = true
