[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "gsfluent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  # Starlette 1.0.1 TestClient hangs under the current AnyIO/httpx stack.
  # Keep FastAPI on the pre-1.0 Starlette line until that combo is verified.
  "starlette>=0.46,<1.0",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "watchfiles>=0.21",
  "plyfile>=1.0",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  # Numeric stack used by core/fusers (KNN+Kabsch via scipy.spatial.cKDTree)
  # and by api/stream + every PLY-handling path. Both are server-side
  # essentials, not client-only renderer deps.
  "numpy>=1.24",
  "scipy>=1.10",
  # zstandard: decoder/encoder for the .gsq streamable splat format
  # (server/tools/pack_splats.py emits zstd-compressed per-frame chunks
  # consumed by core/codecs/gsq.py).
  "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "hypothesis>=6.100",
]

[project.scripts]
gsfluent = "gsfluent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gsfluent"]
include = ["gsfluent/static/**"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".venv",
  "patches",
  "uv.lock",
]

[tool.ruff.lint]
# Conservative starter set: pycodestyle (E), pyflakes (F), isort (I),
# bugbear (B), pyupgrade (UP), comprehensions (C4). No formatting opinion
# beyond line-length — ruff format is opt-in. Ignore E501 (long lines):
# documented format constants and JSON-shape examples regularly exceed 100.
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests routinely have unused fixture-parameter imports flagged by F401
# (pytest fixtures are imported for side effects), assert-rewriting helpers
# flagged by B011, and protocol-conformance suites deliberately import
# real-impl deps after the protocol-only tests (E402).
"tests/**" = ["F401", "F811", "B011", "E402"]
# Re-export hubs: bare imports are intentional.
"gsfluent/protocols/__init__.py" = ["F401"]
"gsfluent/observability/__init__.py" = ["F401"]
"gsfluent/storage/__init__.py" = ["F401"]
"gsfluent/core/sim_engines/__init__.py" = ["F401"]
"gsfluent/core/fusers/__init__.py" = ["F401"]
"gsfluent/core/codecs/__init__.py" = ["F401"]
# FastAPI dependency-injection patterns (File, Depends, Form, Query)
# legitimately use function calls as default-arg sentinels; that's the
# framework idiom, not a real bug.
"gsfluent/api/*.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
# Default scope: the bulletproofing slice's new code. Legacy modules
# (api/*, core/library*.py, core/runner.py, etc.) carry pre-slice type
# debt; they're excluded from strict-mode to keep the gate honest about
# what Phase 1-6 actually delivers as typed. Follow-up: thread strict
# coverage through the legacy modules as a separate sprint.
files = [
  "gsfluent/protocols",
  "gsfluent/observability",
  "gsfluent/storage",
  "gsfluent/config.py",
  "gsfluent/core/state.py",
  "gsfluent/core/limits.py",
  "gsfluent/core/recovery.py",
  "gsfluent/core/sdnotify.py",
  "gsfluent/core/sim_engines/mock.py",
]
plugins = []

# Third-party libs we use without type stubs.
[[tool.mypy.overrides]]
module = [
  "plyfile",
  "plyfile.*",
  "watchfiles",
  "watchfiles.*",
]
ignore_missing_imports = true
