[project]
name = "gsfluent-api"
version = "0.1.0"
description = "gsfluent v2 — internal team demo API server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "minio>=7.2",
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "sentry-sdk[fastapi]>=2.18",
    "arq>=0.26",
    "python-multipart>=0.0.20",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-redis>=4.6",
    "testcontainers[postgres,redis]>=4.8",
    "psycopg2-binary>=2.9",  # sync driver for testcontainers + alembic offline
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsfluent_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
