[project]
name = "gsfluent-worker-render"
version = "0.1.0"
description = "gsfluent v2 — render worker. Streams server-rendered splat scenes via WebRTC."
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.9",
    "av>=12.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "redis>=5.2",
    "minio>=7.2",
    "structlog>=24.4",
    "sentry-sdk>=2.18",
    "numpy>=1.26",
    "Pillow>=10",
    "plyfile>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    # torch + gsplat are OPTIONAL at the container level — they're loaded
    # via lazy import in scene_renderer.py. If absent, the worker falls
    # back to a test pattern. Install on the host alongside the engine
    # (server-side `pip install torch gsplat`), and mount that venv into
    # the container at /opt/engine like worker-sim does.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_render"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
