[project]
name = "gsfluent-worker-sim"
version = "0.1.0"
description = "gsfluent v2 — sim worker. Consumes Arq jobs, runs the MPM/3DGS engine."
requires-python = ">=3.11"
dependencies = [
    "arq>=0.26",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "minio>=7.2",
    "structlog>=24.4",
    "sentry-sdk>=2.18",
    # Engine deps (torch / warp / taichi) are NOT declared here — the
    # engine is mounted from the host into the container at runtime so
    # we don't pin its heavy dep tree twice. The Dockerfile arranges that.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_sim"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
